Creators added with comic from marvel search. Squashed bugs.

--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -331,6 +331,11 @@ body {
 .card-in-stack:hover {
   cursor: pointer;
 }
+
+.card-img {
+  max-width: 197px;
+  max-height: 295px;
+}
 .card-img-top:hover {
   cursor: pointer;
   opacity: 0.5;
